--- a/TutoDjango/monApp/templates/monApp/list_produits.html
+++ b/TutoDjango/monApp/templates/monApp/list_produits.html
@@ -1,25 +1,41 @@
-<html>
-    <head>
-        <title>Mon app DJANGO</title>
-    </head>
-    <body>
-        <h1>Hello mes produits !</h1>
-        <p>
-            Mes produits sont :
+{% extends 'monApp/base.html' %}
+{% block menu %}
+    <h1>Liste des produits</h1>
+{% endblock %}
+{% block contenu %}
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Nom produit</th>
+                <th>Prix unitaire</th>
+                <th>Date fabrication</th>
+                <th>Catégorie</th>
+                <th>Statut</th>
+            </tr>
+        </thead>
+        <tbody>
             {% for prdt in prdts %}
-            {{ prdt.intituleProd | upper }},
+                <tr>
+                    <td>{{ prdt.refProd }}</td>
+                    <td>{{ prdt.intituleProd }}</td>
+                    <td>{{ prdt.prixUnitaireProd }}</td>
+                    <td>{{ prdt.dateFabrication }}</td>
+                    <td>{{ prdt.categorie }}</td>
+                    <td>{{ prdt.statut }}</td>
+                </tr>
             {% endfor %}
-        </p>
-        <p>
-            J'ai
-            {% if prdts|length < 5 %}
+        </tbody>
+    </table>
+    <p>
+        J'ai
+        {% if prdts|length < 5 %}
             peu de
-            {% elif prdts|length < 10 %}
+        {% elif prdts|length < 10 %}
             quelques
-            {% else %}
+        {% else %}
             beaucoup de
-            {% endif %}
-            produits préférés.
-        </p>
-    </body>
-</html>
+        {% endif %}
+        produits préférés.
+    </p>
+{% endblock %}
