--- a/TutoDjango/monApp/templates/monApp/base.html
+++ b/TutoDjango/monApp/templates/monApp/base.html
@@ -14,14 +14,34 @@
         <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto d-flex flex-row">
-                    <li class="nav-item"><a class="nav-link" href="{% url 'lst_prdts' %}">Produits</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'lst_cats' %}">Catégories</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'lst_status' %}">Statuts</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'lst_rayons' %}">Rayons</a></li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}">Déconnexion</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Connexion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'register' %}">Inscription</a>
+                        </li>
+                    {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'lst_prdts' %}">Produits</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'lst_cats' %}">Catégories</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'lst_status' %}">Statuts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'lst_rayons' %}">Rayons</a>
+                    </li>
                 </ul>
             </div>
         </nav>
-    {% block menu %}{% endblock %}
+        {% block menu %}{% endblock %}
     {% endblock %}
     <main role="main" class="container top-pushed">
         <div class="jumbotron">
