--- a/TutoDjango/monApp/templates/monApp/list_produits.html
+++ b/TutoDjango/monApp/templates/monApp/list_produits.html
@@ -4,6 +4,10 @@
 {% endblock %}
 {% block contenu %}
     <a href="{% url 'crt-prdt' %}">Créer un nouveau produit</a>
+    <form method="get">
+        <input type="text" name="q" placeholder="Rechercher un produit" value="{{ request.GET.q }}">
+        <button type="submit">Rechercher</button>
+    </form>
     <table class="table">
         <thead>
             <tr>
