--- a/TutoDjango/monApp/templates/monApp/page_logout.html
+++ b/TutoDjango/monApp/templates/monApp/page_logout.html
@@ -3,7 +3,7 @@
     <div class="align-center col-8 offset-2">
         <p class="lead mb-3 ml-0">Se déconnecter</p>
         <hr/>
-        <form method="POST" action="{% url 'home' %}" autocomplete="off">
+        <form method="POST" action="{% url 'home_no_param' %}" autocomplete="off">
             {% csrf_token %}
             <div class="form-group mb-3">
                 <label>Vous avez été déconnecté.</label>
