feat : table contenir effective

--- a/TutoDjango/monApp/templates/monApp/list_rayons.html
+++ b/TutoDjango/monApp/templates/monApp/list_rayons.html
@@ -15,7 +15,7 @@
         <tbody>
             {% for r in rayons %}
                 <tr>
-                    <td><a href="{% url 'dlt_rayon' r.idRayon %}">{{ r.idRayon }}</a></td>
+                    <td><a href="{% url 'dtl_rayon' r.idRayon %}">{{ r.idRayon }}</a></td>
                     <td>{{ r.nomRayon }}</td>
                     <td><a href="{% url 'upd_rayon' r.idRayon %}">modifier</a></td>
                 </tr>
