--- a/TutoDjango/monApp/templates/monApp/detail_rayon.html
+++ b/TutoDjango/monApp/templates/monApp/detail_rayon.html
@@ -35,5 +35,6 @@
     </div>
 </div>
 
-<a href="{% url 'lst_rayons' %}">← Retour à la liste des rayons</a>
+<p><a href="{% url 'lst_rayons' %}">← Retour à la liste des rayons</a></p>
+<a href="{% url 'dlt_rayon' rayon.idRayon %}">Supprimer le rayon</a></p>
 {% endblock %}
