--- a/TutoDjango/monApp/templates/monApp/list_rayons.html
+++ b/TutoDjango/monApp/templates/monApp/list_rayons.html
@@ -2,35 +2,43 @@
 {% block menu %}
     <h1>{{ titremenu }}</h1>
 {% endblock %}
+
 {% block contenu %}
-    <a href="{% url 'crt_rayon' %}">Créer un nouveau rayon</a>
-    <table class="table">
-        <thead>
+<a href="{% url 'crt_rayon' %}">Créer un nouveau rayon</a>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Nom rayon</th>
+            <th>Valeur marchande du rayon</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for data in ryns_dt %}
             <tr>
-                <th>Id</th>
-                <th>Nom rayon</th>
-                <th>Editer</th>
+                <td><a href="{% url 'dtl_rayon' data.rayon.idRayon %}">{{ data.rayon.idRayon }}</a></td>
+                <td>{{ data.rayon.nomRayon }}</td>
+                <td>{{ data.total_stock|floatformat:2 }} €</td>
+                <td>
+                    <a href="{% url 'dtl_rayon' data.rayon.idRayon %}" class="btn btn-primary mt-2">Détails</a>
+                    <a href="{% url 'upd_rayon' data.rayon.idRayon %}" class="btn btn-warning mt-2">Modifier</a>
+                    <a href="{% url 'dlt_rayon' data.rayon.idRayon %}" class="btn btn-danger mt-2">Supprimer</a>
+                </td>
             </tr>
-        </thead>
-        <tbody>
-            {% for r in rayons %}
-                <tr>
-                    <td><a href="{% url 'dtl_rayon' r.idRayon %}">{{ r.idRayon }}</a></td>
-                    <td>{{ r.nomRayon }}</td>
-                    <td><a href="{% url 'upd_rayon' r.idRayon %}">modifier</a></td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <p>
-        J'ai
-        {% if rayons|length < 5 %}
-            peu de
-        {% elif rayons|length < 10 %}
-            quelques
-        {% else %}
-            beaucoup de
-        {% endif %}
-        rayons préférés.
-    </p>
+        {% endfor %}
+    </tbody>
+</table>
+
+<p>
+    J'ai
+    {% if rayons|length < 5 %}
+        peu de
+    {% elif rayons|length < 10 %}
+        quelques
+    {% else %}
+        beaucoup de
+    {% endif %}
+    rayons préférés.
+</p>
 {% endblock %}
