--- a/TutoDjango/monApp/templates/monApp/base.html
+++ b/TutoDjango/monApp/templates/monApp/base.html
@@ -38,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'lst_rayons' %}">Rayons</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'crt_contenir' %}">Asso. produit à rayon</a>
+                    </li>
                 </ul>
             </div>
         </nav>
