--- a/TutoDjango/monApp/templates/monApp/detail_rayon.html
+++ b/TutoDjango/monApp/templates/monApp/detail_rayon.html
@@ -23,7 +23,10 @@
                                     <li>Quantité : {{ data.qte }}</li>
                                     <li>Total : {{ data.total_produit|floatformat:2 }} €</li>
                                 </ul>
-                                <a href="{% url 'dtl_prdt' data.produit.refProd %}" class="btn btn-primary mt-2">Détails</a>
+
+                                <a href="{% url 'dtl_prdt' data.produit.refProd %}" class="btn btn-primary btn-sm mt-2">Détails</a>
+                                <a href="{% url 'upd_contenir' rayon.idRayon data.produit.refProd %}" class="btn btn-warning btn-sm mt-2">Modifier</a>
+                                <a href="{% url 'dlt_contenir' rayon.idRayon data.produit.refProd %}" class="btn btn-danger btn-sm mt-2">Supprimer</a>
                             </div>
                         </div>
                     </div>
