--- a/TutoDjango/monApp/templates/monApp/list_rayons.html
+++ b/TutoDjango/monApp/templates/monApp/list_rayons.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block contenu %}
-<a href="{% url 'crt_rayon' %}">Créer un nouveau rayon</a>
+<a href="{% url 'crt_rayon' %}" class="btn btn-success mb-3">Créer un nouveau rayon</a>
 <table class="table">
     <thead>
         <tr>
@@ -17,28 +17,21 @@
     <tbody>
         {% for data in ryns_dt %}
             <tr>
-                <td><a href="{% url 'dtl_rayon' data.rayon.idRayon %}">{{ data.rayon.idRayon }}</a></td>
+                <td>
+                    <a href="{% url 'dtl_rayon' data.rayon.idRayon %}">
+                        {{ data.rayon.idRayon }}
+                    </a>
+                </td>
                 <td>{{ data.rayon.nomRayon }}</td>
                 <td>{{ data.total_stock|floatformat:2 }} €</td>
                 <td>
-                    <a href="{% url 'dtl_rayon' data.rayon.idRayon %}" class="btn btn-primary mt-2">Détails</a>
-                    <a href="{% url 'upd_rayon' data.rayon.idRayon %}" class="btn btn-warning mt-2">Modifier</a>
-                    <a href="{% url 'dlt_rayon' data.rayon.idRayon %}" class="btn btn-danger mt-2">Supprimer</a>
+                    <a href="{% url 'dtl_rayon' data.rayon.idRayon %}" class="btn btn-primary btn-sm mt-2">Détails</a>
+                    <a href="{% url 'upd_rayon' data.rayon.idRayon %}" class="btn btn-warning btn-sm mt-2">Modifier</a>
+                    <a href="{% url 'dlt_rayon' data.rayon.idRayon %}" class="btn btn-danger btn-sm mt-2">Supprimer</a>
+                    <a href="{% url 'crt_contenir' data.rayon.idRayon %}" class="btn btn-success btn-sm mt-2">Ajouter un produit</a>
                 </td>
             </tr>
         {% endfor %}
     </tbody>
 </table>
-
-<p>
-    J'ai
-    {% if rayons|length < 5 %}
-        peu de
-    {% elif rayons|length < 10 %}
-        quelques
-    {% else %}
-        beaucoup de
-    {% endif %}
-    rayons préférés.
-</p>
 {% endblock %}
