feat : modifier qte

--- a/TutoDjango/monApp/templates/monApp/update_contenir.html
+++ b/TutoDjango/monApp/templates/monApp/update_contenir.html
@@ -7,9 +7,10 @@
 {% block contenu %}
 <form method="post">
     {% csrf_token %}
-    {{ form.qte.label_tag }}<br>
-    {{ form.qte }}
+    {{ form.as_p }}
     <button type="submit" class="btn btn-primary mt-2">Mettre à jour</button>
 </form>
-<a href="{% url 'dtl_rayon' form.instance.idRayon.idRayon %}">← Retour au rayon</a>
+<a href="{% url 'dtl_rayon' form.instance.idRayon.idRayon %}" class="btn btn-secondary mt-2">
+    ← Retour au rayon
+</a>
 {% endblock %}
